<resources>
    <string name="app_name">TD</string>
    <string name="contact_call">Appel</string>
    <string name="contact_send_message">SMS</string>
    <string name="contact_send_mail">Mail</string>

    <string name="description_profil">Image de profil</string>
    <string name="description_call">Appel</string>
    <string name="description_phone_number">Numéro de téléphone</string>
    <string name="description_mail">Adresse mail</string>
    <string name="description_position">Position</string>

    <string name="description_contact_get_infos">Informations sur ce contact</string>
    <string name="description_send_sms">Envoyer un SMS</string>
    <string name="description_send_mail">Envoyer un mail</string>
    <string name="description_choose_photo">Choisir une photo</string>
    <string name="description_call_contact">Appeler ce contact</string>
    <string name="description_contact_deleted">Contact supprimé</string>

    <string name="error_send_message">Erreur lors de l\'envoi du message</string>
    <string name="contact_send_mail_detail">Envoi d\'un mail</string>

    <string name="contact_name">%1$s %2$s</string>

    <string name="menu_none">Aucun</string>
    <string name="menu_json">Fichier JSON</string>
    <string name="menu_database">Database</string>

    <string name="dialog_delete_message">Voulez-vous vraiment supprimer `%1$s %2$s` ?</string>
</resources>
