<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/contact_photo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_contact"
                android:tint="@color/colorDefault"
                android:contentDescription="@string/description_profil" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/resume_panel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/contact_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingVertical="10dp"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <TextView
                    android:id="@+id/button_call"
                    android:gravity="center"
                    android:text="@string/contact_call"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_phone"
                    android:drawableTint="@color/colorDefault" />

                <TextView
                    android:id="@+id/button_sms"
                    android:gravity="center"
                    android:text="@string/contact_send_message"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_sms"
                    android:drawableTint="@color/colorDefault" />

                <TextView
                    android:id="@+id/button_mail"
                    android:gravity="center"
                    android:text="@string/contact_send_mail"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_mail"
                    android:drawableTint="@color/colorDefault" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="5dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:src="@drawable/ic_phone"
            android:tint="@color/colorDefault"
            android:contentDescription="@string/description_phone_number" />

        <TextView
            android:id="@+id/contact_phone_portable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="5dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:src="@drawable/ic_phone"
            android:tint="@color/colorDefault"
            android:contentDescription="@string/description_phone_number" />

        <TextView
            android:id="@+id/contact_phone_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="5dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:src="@drawable/ic_mail"
            android:tint="@color/colorDefault"
            android:contentDescription="@string/description_mail" />

        <TextView
            android:id="@+id/contact_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="5dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:src="@drawable/ic_location"
            android:tint="@color/colorDefault"
            android:contentDescription="@string/description_position" />

        <TextView
            android:id="@+id/contact_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />
    </LinearLayout>
</LinearLayout>
